feat: add swagger documentation
